assets/css/main.css
/*-----------------------------------------------------
Table of Contents

1. General Styles
2. Blocks & Pages
	# About
	# Blog List
	# Blog Post
	# Contact
	# CTA
	# Featured Works
	# Footer
	# Hero
	# Navigation
	# Portfolio
	# Single Project
------------------------------------------------------*/

/*-----------------------------------------------------
1. General Styles
------------------------------------------------------*/

::-webkit-scrollbar {
    display: none;
}

@font-face {
    font-family: 'HansonBold';
    src: url('../webfonts/Hanson-Bold.ttf');
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	overflow-x: hidden;
	overflow-y: scroll;
}

body {
	font-family: 'HansonBold', sans-serif;
	font-size: 100%;
	line-height: 1.5;
}

a {
	text-decoration: none;
	transition: all .2s ease-in-out;
}

.btn {
	border-radius: 27.5px;
	border: 2px solid #c4c4c4;
	display: inline-block;
	font-family: Montserrat, sans-serif;
	font-size: .75rem;
	font-weight: 600;
	height: 55px;
	letter-spacing: 2.5px;
	line-height: 55px;
	text-align: center;
	text-transform: uppercase;
	width: 220px;
}

.contact-form input,
.contact-form textarea {
	border: none;
	outline: none;
}

.contact-form input {
	margin-bottom: 30px;
}

.contact-form input::placeholder,
.contact-form input,
.contact-form textarea::placeholder {
	font-family: Montserrat, sans-serif;
	font-size: .8rem;
	letter-spacing: .3px;
}

.contact-form input[name=name],
.contact-form input[name=email],
.contact-form input[name=business], 
.contact-form input[name=phone-number] {
	float: left;
	height: 50px;
	line-height: 50px;
	padding-left: 20px;
	width: 48%;
}

.contact-form input[name=name],
.contact-form input[name=business] {
	margin-right: 4%;
}

.contact-form textarea {
	height: 200px;
	padding: 25px;
	width: 100%;
}

.contact-form textarea {
	font-family: Montserrat, sans-serif;
	font-size: .875rem;
	line-height: 1.6;
}

.contact-form textarea::-webkit-scrollbar {
    width: 8px; 
}

.contact-form input[type=submit] {
	cursor: pointer;
	font-family: Montserrat, sans-serif;
	float: right;
	font-size: .6875rem;
	font-weight: 500;
	height: 50px;
	letter-spacing: 3px;
	line-height: 50px;
	margin: 23px 0 0 0;
	text-transform: uppercase;
	transition: all .2s linear;
	width: 220px;
}

.container {
	max-width: 1170px;
	margin: auto;
}

.clearfix {
	clear: both;
}

.img-cover  {
    display: block;
    object-fit: cover;
    height: 100%;
    width: 100%;
}

.img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
}

/*-----------------------------------------------------
2. Blocks & Pages
------------------------------------------------------*/

/* =============== # About =============== */

.about .intro {
	font-size: 3rem;
	font-weight: 400;
	line-height: 1.4;
	margin: 140px 50px 140px 0;
}

.about-heading {
	font-size: 2rem;
	font-weight: 400;
	text-transform: capitalize;
	margin-bottom: 60px;
	border-left: 4px solid #ff6f61;
	padding-left: 28px;
}

.services {
	margin-bottom: 100px;
}

.services-item {
	align-items: center;
	display: flex;
	float: left;
	width: 28%;
}

.services-item:nth-of-type(2) {
	margin: 0 3%;
}

.service-icon {
	align-items: center;
	border-radius: 50%;
	display: flex;
	font-size: 1.7rem;
	justify-content: center;
	height: 64px;
	width: 64px;
}

.services-item .content h3 {
	font-size: 1.5rem;
	font-weight: 400;
	letter-spacing: .2px;
	margin: 22px 0 16px 0;
	text-transform: capitalize;
}

.services-item li {
	font-size: 1rem;
	font-weight: 300;
	list-style: none;
	margin-bottom: 12px;
	text-transform: capitalize;
}

.team-member {
	float: left;
	height: 390px;
	position: relative;
	width: 33.333%;
}

.team-member .overlay {
	left: 0;
	height: 100%;
	opacity: 0;
	position: absolute;
	text-align: center;
	top: 0;
	transition: all .3s linear;
	width: 100%;
}

.team-member .overlay .info {
	left: 50%;
	position: absolute;
	top: 50%;
	transform: translate(-50%, -50%);
}

.team-member:hover .overlay {
	cursor: pointer;
	opacity: 1;
}

.team-member .overlay .info h2 {
	font-size: 1.3125rem;
	font-weight: 400;
	margin-bottom: 5px;
	text-transform: capitalize;
}

.team-member .overlay .info h3 {
	font-size: .875rem;
	font-weight: 300;
	letter-spacing: .1px;
	text-transform: capitalize;
}

/* =============== # Blog List =============== */

.blog {
	margin-bottom: 140px;
}

.blog .container {
	display: flex;
	flex-wrap: wrap;
}

.blog .blog-item .entry-thumbnail {
	height: 470px;
}

.blog .blog-item {
	width: 48.5%;
}

.blog .blog-item:nth-of-type(odd) {
	margin: 0 3% 62px 0;
}

.blog .blog-item:nth-of-type(7){
	margin-bottom: 0;
}

.entry-category {
	display: block;
	font-size: 1rem;
	font-weight: 400;
	letter-spacing: .4px;
	text-transform: capitalize;
}

.blog .entry-category {
	margin: 22px 0 6px 0;
}

.blog .entry-title {
	font-size: 1.5rem;
	font-weight: 400;
	line-height: 1.4;
	text-transform: capitalize;
}

/* =============== # Blog Post =============== */


.blog-post .container {
	position: relative;
}

.blog-post .entry-header {
	margin: 56px auto 49px auto;
	text-align: center;
	width: 51%;
}

.blog-post .entry-title {
	font-size: 2.6rem;
	font-weight: 400;
	line-height: 1.3;
	margin: 18px 0 18px 0;
	text-transform: capitalize;
}

.blog-post .entry-category {
	font-size: 1.1rem;
}

.entry-date {
	font-size: .9rem;
}

.blog-post .entry-thumbnail {
	height: 600px;
	margin-bottom: 67px;
	width: 100%;
}

.entry-content p {
	font-size: 1.1rem;
	font-weight: 300;
	line-height: 1.9;
	margin: 0 auto 24px auto;
	width: 51%;
}

.entry-content .post-img {
	height: 500px;
	margin: 68px auto;
	width: 74%;
}

.share-links {
	margin: 46px auto 90px auto;
	text-align: center;
	width: 51%;
}

.share-links li  {
	display: inline-block;
	list-style: none;
}

.share-links li a {
	border-radius: 50%;
	display: block;
	font-size: .875rem;
	height: 50px;
	line-height: 50px;
	width: 50px;
}

.share-links li:nth-of-type(2) {
	margin: 0 10px;
}

.comments,
.leave-comment {
	width: 51%;
}
/* ... */

